Add mailchimp link

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    
+
     display: flex;
     align-items: center;
     justify-content: center;
@@ -198,4 +198,9 @@ body {
     font-weight: bold;
     margin-top: 10px;
     color: #f05f40;
+}
+
+/* Mailchimp */
+#mc_embed_signup form {
+    padding: 0;
 }
